--- a/css/styles.scss
+++ b/css/styles.scss
@@ -13,7 +13,6 @@ $gradient: linear-gradient(45deg, $secondary, $linkOne);
 body {
   margin: 0;
   padding: 0;
-  height: 200vh;
   font-family: 'Raleway', sans-serif;
 }
 
@@ -57,6 +56,12 @@ body {
       animation: 1000ms ease 0s infinite alternate mouseIcon;
     }
   }
+
+  #homeBtn {
+    position: relative;
+    top: 20px;
+
+  }
 }
 
 //scroll animation
@@ -78,10 +83,6 @@ body {
   justify-content: center;
   align-items: center;
   background-color: $primary;
-  /*background: $gradient, url('../assets/img/flowersBlur.jpg');
-  background-blend-mode: multiply;
-  background-size: cover;
-  background-position: bottom;*/
 
   .text {
     width: 550px;
@@ -117,7 +118,7 @@ body {
 
   .text {
     width: 550px;
-    margin-top: 60px;
+    margin-top: 30px;
     margin-bottom: 60px;
     display: flex;
     flex-direction: column;
@@ -302,6 +303,7 @@ body {
       color: $secondary;
     }
   }
+
   #contactIcons {
     width: 550px;
     display: flex;
@@ -332,6 +334,12 @@ body {
       a {
         text-decoration: none;
         color: $primary;
+        transition: color 300ms ease;
+
+        &:hover {
+          color: $secondary;
+          transition: color 300ms ease;
+        }
       }
     }
   }
